notary_deployment_automated/helm/argo-cd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 10g
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.gcp.bluemint.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  number: 443
  tls:
    - hosts:
        - argocd.gcp.bluemint.ai
      secretName: argocd-letsencrypt
